// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<div
  className="App"
>
  <Header
    menuShown={false}
    toggleMenu={[Function]}
  />
  <Route
    component={[Function]}
    exact={true}
    path="/"
  />
  <Route
    component={[Function]}
    exact={true}
    path="/about"
  />
  <Route
    component={[Function]}
    exact={true}
    path="/haikus"
  />
  <Route
    component={[Function]}
    exact={true}
    path="/haiku/:id"
  />
</div>
`;

exports[`App should match snapshot if menuShown is true 1`] = `
<div
  className="App"
>
  <Menu
    toggleMenu={[Function]}
  />
  <Header
    menuShown={true}
    toggleMenu={[Function]}
  />
  <Route
    component={[Function]}
    exact={true}
    path="/"
  />
  <Route
    component={[Function]}
    exact={true}
    path="/about"
  />
  <Route
    component={[Function]}
    exact={true}
    path="/haikus"
  />
  <Route
    component={[Function]}
    exact={true}
    path="/haiku/:id"
  />
</div>
`;
